@@ -4,9 +4,9 @@ HELLO!
 
 
 To activate the tasks calendar:
-1) Edit the TaskCalendar.bat.
-2) Copy your javafx folder destination into "--module-path "C:\Users\Benny\Downloads\JAVA\javafx-sdk-25.0.1\lib" and save.
-2) please press twice on TaskCalendar.bat
+1) Download Java JDK25 : https://www.oracle.com/java/technologies/javase/jdk25-archive-downloads.html
+2) Download JavaFX SDK25 : https://gluonhq.com/products/javafx/
+3) To run this project, add the following to your VM Arguments: --module-path [path_to_sdk] --add-modules javafx.controls,javafx.fxml
 
 
 
